[package]
name = "kdecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "env"] }
merge-struct = "0.1.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
base64 = "0.21.0"
syntect = "5.0.0"
